# quictun

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  tunnel-mac.toml
docs/: bench-001-phase1-transport-tuning.md  bench-002-tun-tier-optimizations.md  bench-003-tun-gso-gro-offload.md  benchmarks.md  v2-design-seed.md  whitepaper.md
patches/: quinn-proto-all-changes.patch  quinn-proto-decrypt-in-place.patch  quinn-proto-key-extraction.patch
quictun-cli/: Cargo.toml
quictun-cli/src/: down.rs  genkey.rs  main.rs  pubkey.rs  state.rs  up.rs
quictun-compio/: Cargo.toml
quictun-compio/src/: event_loop.rs  lib.rs  quic.rs  shared.rs
quictun-core/: Cargo.toml
quictun-core/src/: batch_io.rs  config.rs  connection.rs  data_plane.rs  dispatcher.rs  engine.rs  event_loop.rs  fast_tunnel.rs  icmp.rs  lib.rs  manager.rs  mss.rs  nat.rs  peer.rs  proto_config.rs  proto_driver.rs  quic_state.rs  routing.rs  session.rs  tunnel.rs
quictun-core/tests/: echo_test.rs  production_features_test.rs
quictun-crypto/: Cargo.toml
quictun-crypto/src/: keys.rs  lib.rs  rpk.rs
quictun-dpdk/: Cargo.toml  README.md  build.rs
quictun-dpdk/csrc/: shim.c  shim.h
quictun-dpdk/src/: checksum.rs  dispatch.rs  eal.rs  engine.rs  event_loop.rs  ffi.rs  lib.rs  mbuf.rs  net.rs  port.rs  quic.rs  reader.rs  ring.rs  router.rs  shared.rs  veth.rs
quictun-net/: Cargo.toml
quictun-net/src/: adapter.rs  container.rs  dispatch.rs  engine.rs  engine_v2.rs  lib.rs  multicore.rs  percore.rs  pipeline.rs  pipeline2.rs  route.rs
quictun-proto/: Cargo.toml
quictun-proto/src/: ack.rs  bitmap.rs  frame.rs  lib.rs  local.rs  rate_control.rs  shared.rs  split.rs
quictun-quic/: Cargo.toml
quictun-quic/src/: ack.rs  bbr.rs  bitmap.rs  cc.rs  frame.rs  lib.rs  local.rs  ordered_queue.rs  packet.rs  shared.rs  split.rs
quictun-tun/: Cargo.toml
quictun-tun/src/: device.rs  lib.rs
quictun-uring/: Cargo.toml  README.md
quictun-uring/src/: bufpool.rs  engine.rs  event_loop.rs  inbound.rs  lib.rs  outbound.rs  quic.rs  quic_loop.rs  reader.rs  shared.rs  timer.rs  tun_loop.rs  udp.rs  wakeup.rs
scripts/: build-dpdk.sh
spike/: Cargo.toml
spike/src/: client.rs  common.rs  server.rs
