[workspace]
resolver = "2"
members = [
    "quictun-crypto",
    "quictun-core",
    "quictun-tun",
    "quictun-uring",
    "quictun-dpdk",
    "quictun-quic",
    "quictun-net",
    "quictun-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
quictun-crypto = { path = "quictun-crypto" }
quictun-core = { path = "quictun-core" }
quictun-tun = { path = "quictun-tun" }
quictun-uring = { path = "quictun-uring" }
quictun-dpdk = { path = "quictun-dpdk" }
quictun-net = { path = "quictun-net" }

# QUIC + TLS
quinn = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio"] }
quinn-proto = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs"] }
rustls = { version = "0.23.20", default-features = false, features = ["aws_lc_rs", "std", "logging"] }
aws-lc-rs = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
bytes = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
base64 = "0.22"

# Crypto utilities
sha2 = "0.10"
hex = "0.4"

# Networking
ipnet = "2"
mio = { version = "1", features = ["os-poll", "net"] }
socket2 = { version = "0.5", features = ["all"] }

# CLI
clap = { version = "4", features = ["derive"] }

# PEM parsing (for X.509 mode)
rustls-pemfile = "2"

# Test utilities
rcgen = "0.13"

# Security
zeroize = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUN device
tun-rs = { version = "2", features = ["async"] }

# io_uring (Linux only)
io-uring = "0.7"
libc = "0.2"
crossbeam-channel = "0.5"

# quictun-quic
quictun-quic = { path = "quictun-quic" }
smallvec = { version = "1", features = ["const_generics"] }

[patch.crates-io]
quinn-proto = { path = "third_party/quinn/quinn-proto" }

[profile.release]
lto = "thin"
debug = false
