[package]
name = "quictun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
fips = ["quictun-core/fips"]

[[bin]]
name = "quictun"
path = "src/main.rs"

[dependencies]
quictun-crypto = { workspace = true }
quictun-core = { workspace = true }
quictun-tun = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ipnet = { workspace = true }
bytes = { workspace = true }
quinn-proto = { workspace = true }
libc = "0.2"
mimalloc = "0.1"
socket2 = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
quictun-uring = { workspace = true }
quictun-dpdk = { workspace = true }
