[package]
name = "quictun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
fips = ["quictun-core/fips"]

[[bin]]
name = "quictun"
path = "src/main.rs"

[dependencies]
quictun-crypto = { workspace = true }
quictun-core = { workspace = true }
quictun-tun = { workspace = true }
quictun-net = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ipnet = { workspace = true }
libc = { workspace = true }
mimalloc = "0.1"
socket2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
quictun-dpdk = { workspace = true }
