[package]
name = "quictun-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
fips = ["quictun-crypto/fips"]

[dependencies]
quictun-crypto = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
quictun-tun = { workspace = true }
quinn-proto = { workspace = true }
quictun-proto = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }
aws-lc-rs = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }
libc = { workspace = true }
hex = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
