[package]
name = "quictun-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustls = { workspace = true }
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
