[package]
name = "quictun-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quinn-proto = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
