[package]
name = "quictun-uring"
version.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
quinn-proto = { workspace = true }
rustls = { workspace = true }
quictun-crypto = { workspace = true }
quictun-core = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
io-uring = { workspace = true }
libc = { workspace = true }
