[package]
name = "quictun-spike"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spike-server"
path = "src/server.rs"

[[bin]]
name = "spike-client"
path = "src/client.rs"

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio"] }
rustls = { version = "0.23.20", default-features = false, features = ["aws_lc_rs", "std", "logging"] }
aws-lc-rs = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
